[package]
name = "mcmc-rs"
version = "0.7.1"
edition = "2024"
description = "Minimal rust client for memcached"
readme = "README.md"
repository = "https://github.com/ArtemIsmagilov/mcmc-rs"
license = "MIT"
keywords = ["memcached"]
categories = ["asynchronous", "caching", "database"]

[[bench]]
harness = false
name = "my_benchmark"

[dependencies]
crc32fast = "1.5.0"
deadpool = "0.12.3"
hashring = "0.3.6"
smol = "2.0.2"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
