[package]
name = "mcmc-rs"
version = "0.7.3"
edition = "2024"
description = "Minimal rust client for memcached"
readme = "README.md"
repository = "https://github.com/ArtemIsmagilov/mcmc-rs"
license = "MIT"
keywords = ["memcached"]
categories = ["asynchronous", "caching", "database"]

[[bench]]
harness = false
name = "my_benchmark"

[dependencies]
async-native-tls = "0.5.0"
crc32fast = "1.5.0"
deadpool = "0.13.0"
hashring = "0.3.6"
smol = "2.0.2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
